--- a/app/src/main/res/layout/holder_lesson_item.xml
+++ b/app/src/main/res/layout/holder_lesson_item.xml
@@ -4,12 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="android.view.View"/>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.models.Lesson" />
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/lesson_card"
         style="@style/unipi_lesson_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +28,7 @@
                 mandatoryColor="@{model.mandatory}"
                 android:layout_width="@dimen/dimen_5"
                 android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="@id/lesson_title"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:background="@color/unipi_red" />
@@ -37,10 +41,33 @@
                 android:text="@{model.title}"
                 android:textColor="@color/unipi_blue"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/icon_more"
                 app:layout_constraintStart_toEndOf="@id/lesson_ribbon"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/app_name" />
+
+            <ImageView
+                android:id="@+id/icon_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/arrow_right"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/lesson_title"
+                app:layout_constraintTop_toTopOf="@id/lesson_title"/>
+
+            <TextView
+                android:id="@+id/lesson_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:visibility="gone"
+                android:paddingStart="@dimen/dimen_16"
+                android:paddingBottom="@dimen/dimen_16"
+                android:paddingEnd="@dimen/dimen_16"
+                android:text="@{model.description}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/lesson_ribbon"
+                app:layout_constraintTop_toBottomOf="@id/lesson_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
