Implementation: Changed shimmer ui look on announcements,

--- a/app/src/main/res/layout/holder_announcement_shimmer_item.xml
+++ b/app/src/main/res/layout/holder_announcement_shimmer_item.xml
@@ -7,40 +7,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
+            style="@style/unipi_card"
             android:layout_width="match_parent"
-            android:paddingTop="@dimen/dimen_10"
-            android:paddingStart="@dimen/dimen_10"
-            android:paddingEnd="@dimen/dimen_10"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/announcement_date"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/shimmer_grey"
-                android:text="@string/lorem_ipsum"
-                android:textColor="@color/shimmer_grey"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="match_parent"
+                android:padding="@dimen/dimen_10">
 
-            <TextView
-                android:id="@+id/announcement_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/shimmer_grey"
-                android:text="@string/lorem_ipsum_2"
-                android:textColor="@color/shimmer_grey"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/announcement_date" />
+                <TextView
+                    android:id="@+id/announcement_title"
+                    style="@style/text_14_blue_highlight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@string/app_name" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_1"
-                android:layout_marginTop="@dimen/dimen_10"
-                android:background="@color/unipi_red"
-                app:layout_constraintTop_toBottomOf="@id/announcement_title" />
+                <TextView
+                    android:id="@+id/announcement_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_10"
+                    android:background="@drawable/round_corners"
+                    android:backgroundTint="@color/shimmer_grey_lighter"
+                    android:textColor="@color/grey_light"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/announcement_title"
+                    tools:text="@string/app_name" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/announcement_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_5"
+                    android:background="@drawable/round_corners"
+                    android:backgroundTint="@color/shimmer_grey_lighter"
+                    android:textColor="@color/grey_light"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/announcement_date" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
     </com.facebook.shimmer.ShimmerFrameLayout>
 </layout>
