--- a/app/src/main/res/layout/activity_department.xml
+++ b/app/src/main/res/layout/activity_department.xml
@@ -29,7 +29,7 @@
             android:contentDescription="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_help_white"
+            android:src="@drawable/ic_call_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
