--- a/app/src/main/res/layout/holder_eclass_lesson_shimmer_item.xml
+++ b/app/src/main/res/layout/holder_eclass_lesson_shimmer_item.xml
@@ -7,21 +7,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
+            style="@style/unipi_card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/dimen_5">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/lesson_item_txt"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/shimmer_grey"
-                android:padding="@dimen/dimen_16"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/app_name" />
+                android:layout_height="match_parent">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/lesson_item_txt"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_corners"
+                    android:backgroundTint="@color/shimmer_grey_lighter"
+                    android:layout_margin="@dimen/dimen_16"
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/lesson_right_img"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@string/app_name" />
+
+                <ImageView
+                    android:id="@+id/lesson_right_img"
+                    android:layout_width="@dimen/image_35"
+                    android:layout_height="@dimen/image_35"
+                    android:layout_marginEnd="@dimen/dimen_5"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/arrow_right"
+                    app:layout_constraintBottom_toBottomOf="@id/lesson_item_txt"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/lesson_item_txt" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
     </com.facebook.shimmer.ShimmerFrameLayout>
 </layout>
