--- a/app/src/main/res/layout/holder_professor_item.xml
+++ b/app/src/main/res/layout/holder_professor_item.xml
@@ -45,7 +45,7 @@
                 android:text="@{model.fullName}"
                 android:textColor="@color/unipi_blue"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/right_arrow"
                 app:layout_constraintStart_toEndOf="@id/professor_img"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/app_name" />
@@ -58,10 +58,20 @@
                 android:paddingBottom="@dimen/dimen_10"
                 android:text="@{model.title}"
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/right_arrow"
                 app:layout_constraintStart_toEndOf="@id/professor_img"
                 app:layout_constraintTop_toBottomOf="@id/professor_date"
                 tools:text="@string/app_name" />
+
+            <ImageView
+                android:id="@+id/right_arrow"
+                android:layout_width="@dimen/image_35"
+                android:layout_height="@dimen/image_35"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/arrow_right"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
