--- a/app/src/main/res/layout/leave_app_bottom_sheet.xml
+++ b/app/src/main/res/layout/leave_app_bottom_sheet.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:background="@drawable/round_corners_top">
 
         <TextView
             android:id="@+id/bottom_sheet_title"
@@ -21,18 +21,17 @@
         <TextView
             android:id="@+id/bottom_sheet_yes_btn"
             style="@style/text_16_black"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_16"
             android:layout_marginTop="@dimen/dimen_16"
-            android:layout_marginBottom="@dimen/dimen_20"
-            android:background="@color/grey_bg"
+            android:layout_marginEnd="@dimen/dimen_16"
+            android:background="@color/unipi_blue"
             android:gravity="center_horizontal"
             android:padding="@dimen/dimen_16"
             android:text="@string/leaving_yes_btn"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/bottom_sheet_cancel_btn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title" />
@@ -40,18 +39,18 @@
         <TextView
             android:id="@+id/bottom_sheet_cancel_btn"
             style="@style/text_16_black"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dimen_16"
-            android:layout_marginEnd="@dimen/dimen_16"
-            android:background="@color/unipi_blue"
+            android:layout_margin="@dimen/dimen_16"
+            android:background="@color/grey_light"
             android:gravity="center_horizontal"
             android:padding="@dimen/dimen_16"
             android:text="@string/leaving_cancel_btn"
             android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/bottom_sheet_yes_btn"
-            app:layout_constraintTop_toTopOf="@id/bottom_sheet_yes_btn" />
+            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_yes_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
