--- a/app/src/main/res/layout/contact_screen_bottom_sheet.xml
+++ b/app/src/main/res/layout/contact_screen_bottom_sheet.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:background="@drawable/round_corners_top">
 
         <TextView
             android:id="@+id/bottom_sheet_title"
