--- a/app/src/main/res/layout/holder_carousel_item.xml
+++ b/app/src/main/res/layout/holder_carousel_item.xml
@@ -24,7 +24,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground">
 
             <ImageView
                 android:id="@+id/carousel_img"
