--- a/app/src/main/res/layout/holder_eclass_lesson_item.xml
+++ b/app/src/main/res/layout/holder_eclass_lesson_item.xml
@@ -22,7 +22,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground">
 
             <TextView
                 android:id="@+id/lesson_item_txt"
