--- a/app/src/main/res/layout/holder_lesson_item.xml
+++ b/app/src/main/res/layout/holder_lesson_item.xml
@@ -21,7 +21,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground">
 
             <View
                 android:id="@+id/lesson_ribbon"
