--- a/app/src/main/res/layout/activity_professors.xml
+++ b/app/src/main/res/layout/activity_professors.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_bg"
+        android:id="@+id/professors_screen"
         tools:context=".ui.professors.ProfessorsActivity">
 
         <androidx.recyclerview.widget.RecyclerView
