Implementation: Contact Screen | Added secretary title to bottomsheet

--- a/app/src/main/res/layout/contact_screen_bottom_sheet.xml
+++ b/app/src/main/res/layout/contact_screen_bottom_sheet.xml
@@ -14,10 +14,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dimen_16"
-            android:text="@string/contact_type_selection"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/contact_type_selection" />
 
         <ImageView
             android:id="@+id/email_icon"
