--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -39,7 +39,8 @@
             android:adapter="@{viewModel.adapter}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/search_action"
-            tools:itemCount="10" />
+            tools:itemCount="10"
+            tools:listitem="@layout/holder_eclass_lesson_item" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
