--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,12 @@
     <color name="unipi_blue_70_opacity">#70222C54</color>
 
     <color name="grey_bg">#F0F0F0</color>
+
     <color name="shimmer_grey">#666666</color>
     <color name="shimmer_grey_light">#999999</color>
     <color name="shimmer_grey_lighter">#B3B3B3</color>
 
     <color name="grey_light">#888888</color>
+    <color name="light_blue">#c6d2f6</color>
 
 </resources>
