--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -13,9 +13,16 @@
         android:id="@+id/nav_lessons"
         android:name="com.stathis.unipiapp.ui.dashboard.lessons.MyLessonsFragment"
         android:label="MyLessonsFragment" />
+
     <fragment
         android:id="@+id/nav_syllabus"
         android:name="com.stathis.unipiapp.ui.dashboard.syllabus.SyllabusFragment"
         android:label="SyllabusFragment" />
+
+    <fragment
+        android:id="@+id/nav_grades"
+        android:name="com.stathis.unipiapp.ui.dashboard.grades.GradesFragment"
+        android:label="GradesFragment" />
+
 
 </navigation>
