--- a/app/src/main/res/layout/intro_screen_header.xml
+++ b/app/src/main/res/layout/intro_screen_header.xml
@@ -1,37 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <View
-        android:id="@+id/unipi_header_bg"
+    <data>
+
+        <variable
+            name="model"
+            type="com.stathis.unipiapp.models.grading.StudentInfoCardDto" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/round_corners"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/unipi_desc"/>
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/unipi_logo"
-        android:layout_width="@dimen/image_50"
-        android:layout_height="@dimen/image_50"
-        android:layout_marginTop="@dimen/dimen_10"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_unipi_logo_svg"
-        app:layout_constraintEnd_toEndOf="@id/unipi_header_bg"
-        app:layout_constraintStart_toStartOf="@id/unipi_header_bg"
-        app:layout_constraintTop_toTopOf="@id/unipi_header_bg" />
+        <View
+            android:id="@+id/unipi_header_bg"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/round_corners"
+            app:layout_constraintBottom_toBottomOf="@id/student_am"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/unipi_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10"
-        android:text="@string/unipi"
-        style="@style/text_16_blue_bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/unipi_logo" />
+        <ImageView
+            android:id="@+id/unipi_logo"
+            android:layout_width="@dimen/image_50"
+            android:layout_height="@dimen/image_50"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_unipi_logo_svg"
+            app:layout_constraintEnd_toEndOf="@id/unipi_header_bg"
+            app:layout_constraintStart_toStartOf="@id/unipi_header_bg"
+            app:layout_constraintTop_toTopOf="@id/unipi_header_bg" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/student_fullname"
+            style="@style/text_16_blue_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dimen_10"
+            android:text="@{model.firstName + ' ' + model.lastName}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/unipi_logo"
+            tools:text="@string/unipi" />
+
+        <TextView
+            android:id="@+id/student_am"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="@dimen/dimen_10"
+            android:paddingBottom="@dimen/dimen_10"
+            android:text="@{model.aem}"
+            android:textColor="@color/grey_dark"
+            android:textSize="16sp"
+            app:drawableStartCompat="@drawable/ic_profile"
+            app:drawableTint="@color/grey_dark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/student_fullname"
+            tools:text="@string/unipi" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
