--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="unipi_blue_70_opacity">#70222C54</color>
 
     <color name="grey_bg">#F0F0F0</color>
+    <color name="grey_dark">#363636</color>
 
     <color name="shimmer_grey">#666666</color>
     <color name="shimmer_grey_light">#999999</color>
