--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -33,4 +33,13 @@
                 android:title="@string/app_contact" />
         </menu>
     </item>
+
+    <item android:title="@string/exit">
+        <menu>
+            <item
+                android:id="@+id/logout"
+                android:title="@string/logout" />
+        </menu>
+    </item>
+
 </menu>
